# mantle

./: .dockerignore  .env.example  .gitignore  Cargo.docker.toml  Cargo.toml  Dockerfile.analytics  Dockerfile.api  Dockerfile.ray  Dockerfile.worker  README.md  config.toml  docker-compose.ghcr.yml  docker-compose.yml
.github/actions/setup-swap/: action.yml
.github/workflows/: ci.yml  docker-publish.yml
crates/mantle-api/: Cargo.toml
crates/mantle-api/src/: admin.rs  auth.rs  datasets.rs  error.rs  jobs.rs  lib.rs  main.rs  plugins.rs  services.rs  vrpm_client.rs
crates/mantle-api/static/: console.html
crates/mantle-arrow/: Cargo.toml
crates/mantle-arrow/src/: lib.rs
crates/mantle-cache/: Cargo.toml
crates/mantle-cache/src/: jobs.rs  lib.rs  redis.rs
crates/mantle-catalog/: Cargo.toml
crates/mantle-catalog/src/: client.rs  ducklake.rs  error.rs  lib.rs  notify.rs  partition.rs  postgres.rs  services.rs  virtual_services.rs
crates/mantle-config/: Cargo.toml
crates/mantle-config/src/: lib.rs
crates/mantle-ingestion/: Cargo.toml
crates/mantle-ingestion/src/: cloud_ref.rs  lib.rs  metadata.rs  service.rs  storage.rs  uri.rs  virtualize.rs
crates/mantle-ogc/: Cargo.toml
crates/mantle-ogc/src/: lib.rs  models.rs  plugins.rs  routes.rs
crates/mantle-raster/: Cargo.toml
crates/mantle-raster/src/: byte_cache.rs  cog.rs  colormap.rs  encode.rs  engine.rs  lib.rs  mosaic.rs  oxigdal_source.rs  storage.rs  tile_math.rs
crates/mantle-render-ast/: Cargo.toml
crates/mantle-render-ast/src/: ast.rs  execute.rs  lib.rs  parse.rs  plan.rs
crates/mantle-stac/: Cargo.toml
crates/mantle-stac/src/: filter.rs  items.rs  lib.rs  models.rs  routes.rs
crates/mantle-worker/: Cargo.toml
crates/mantle-worker/src/: catalog.rs  lib.rs  main.rs  prefetch.rs  storage.rs
helm/mantle/: Chart.yaml  values-prod.yaml  values.yaml
helm/mantle/templates/: _helpers.tpl  analytics-worker-deployment.yaml  api-deployment.yaml  api-service.yaml  configmap.yaml  hpa.yaml  ingress.yaml  keda-scaledobject.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  ray-head-deployment.yaml  ray-head-service.yaml  ray-worker-deployment.yaml  redis.yaml  secret.yaml  vrpm-sidecar-deployment.yaml  vrpm-sidecar-service.yaml  worker-deployment.yaml
migrations/: 001_init.sql  002_append_only_notify.sql  003_attached_functions.sql  004_dataset_deletion.sql  004_service_deletion.sql  005_dataset_deletions_drop_fk.sql  005_service_deletions_drop_fk.sql  006_dataset_description.sql  006_service_description.sql
python/: README.md  pyproject.toml
python/mantle_analytics/: __init__.py  config.py  icechunk_io.py  job_spec.py  output.py  raster_read.py  registry.py  security.py  status.py  tasks.py  virtualize.py  vrpm_server.py  worker.py
python/mantle_analytics/plugins/: __init__.py  base.py  context.py  parameters.py
python/mantle_analytics/plugins/builtin/: README.md
python/mantle_analytics/plugins/builtin/prpm/: __init__.py  zonal_stats.py
python/mantle_analytics/plugins/builtin/vrpm/: __init__.py  ndvi.py
python/mantle_analytics/plugins/custom/prpm/: README.md  __init__.py  minimal_prpm.py
python/mantle_analytics/plugins/custom/vrpm/: README.md  __init__.py  minimal_vrpm.py
python/tests/: test_job_spec.py  test_output.py  test_parameters.py  test_plugins.py  test_security.py  test_status.py  test_vrpm_server.py
scripts/: build-push-images.ps1  build-push-images.sh  deploy-ec2-bootstrap.sh  dev-up.ps1  dev-up.sh  smoke.ps1  smoke.sh
tests/integration/: Cargo.toml  cache_warm_before_tile.rs  cloud_ref_edr.rs  contracts.rs  process_job_async.rs  stack_health.rs  tile_latency.rs  upload_stac_tile.rs
tests/integration/src/: contracts.rs  lib.rs  stack.rs
