[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mantle-analytics"
version = "0.1.0"
description = "Ray tasks and process runners for Mantle analytics"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pyarrow>=18.0",
    "redis>=5.0",
    "numpy>=2.0",
]

[project.optional-dependencies]
ray = ["ray[default]>=2.40"]
dev = ["pytest>=8.0", "ruff>=0.8"]
analytics = ["ray[default]>=2.40", "boto3>=1.35"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["mantle_analytics"]
