[package]
name = "mantle-arrow"
version.workspace = true
edition.workspace = true

[dependencies]
arrow = { workspace = true }
arrow-schema = { workspace = true }
arrow-ipc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
