[package]
name = "mantle-cache"
version.workspace = true
edition.workspace = true

[dependencies]
mantle-config = { path = "../mantle-config" }
mantle-arrow = { path = "../mantle-arrow" }
async-trait = "0.1"
base64 = "0.22"
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
