[package]
name = "mantle-ogc"
version.workspace = true
edition.workspace = true

[dependencies]
mantle-arrow = { path = "../mantle-arrow" }
mantle-raster = { path = "../mantle-raster" }
mantle-render-ast = { path = "../mantle-render-ast" }
mantle-catalog = { path = "../mantle-catalog" }
mantle-cache = { path = "../mantle-cache" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
geo-types = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
async-trait = "0.1"
mantle-config = { path = "../mantle-config" }
