[package]
name = "mantle-raster"
version.workspace = true
edition.workspace = true

[dependencies]
mantle-arrow = { path = "../mantle-arrow" }
mantle-cache = { path = "../mantle-cache" }
mantle-catalog = { path = "../mantle-catalog" }
mantle-config = { path = "../mantle-config" }
mantle-render-ast = { path = "../mantle-render-ast" }
async-trait = "0.1"
thiserror = { workspace = true }
tokio = { workspace = true }
object_store = { workspace = true }
bytes = "1"
bincode = "1"
image = { version = "0.25", default-features = false, features = ["png", "webp"] }
rayon = "1"
moka = { version = "0.12", features = ["sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
geo-types = { workspace = true }
tracing = "0.1"
oxigdal = { version = "0.1", features = ["geotiff", "algorithms"] }
oxigdal-algorithms = { version = "0.1.6", features = ["crs-transform"] }
# TIFF compression 7 (JPEG) is common for RGB COGs (e.g. cog_rgb.tif) but
# isn't in oxigdal-geotiff's default feature set (deflate/lzw only).
oxigdal-geotiff = { version = "0.1.6", features = ["jpeg"] }

[dev-dependencies]
tokio = { workspace = true }
