[package]
name = "mantle-stac"
version.workspace = true
edition.workspace = true

[dependencies]
mantle-arrow = { path = "../mantle-arrow" }
mantle-catalog = { path = "../mantle-catalog" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
geo-types = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
async-trait = "0.1"
mantle-config = { path = "../mantle-config" }
